--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.0",
+    "@types/lodash-es": "^4.17.5",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -31,6 +35,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "lodash-es": "^4.17.21",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
