--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "lodash-es": "^4.17.21",
     "prettier": "^2.2.1",
+    "rgb-hex": "^4.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
