--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "flush-promises": "^1.0.2",
     "lodash-es": "^4.17.21",
     "prettier": "^2.2.1",
     "rgb-hex": "^4.0.0",
